--- a/index.html
+++ b/index.html
@@ -10,6 +10,59 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <header class="header">
+        <div class="h-left">
+            <h1 class="header-title">
+                Let's make
+                beautiful flowers a
+                part of your life.
+            </h1>
+            <p class="header-description">
+                It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout. The point of using Lorem Ipsum is
+                that it has a more-or-less normal distribution of letters.
+            </p>
+            <button class="btn">Shop Now</button>
+        </div>
+        <img class="h-right" src="Flower Asset/pngwing 10.png" alt="">
+    </header>
+
+    <main>
+        <section class="feature-sec">
+            <div class="feature-info">
+                <h3 class="sec-title">
+                    Our Featured Flowers
+                </h3>
+                <p class="sec-description">
+                    It is a long established fact that a reader will be distracted by the readable
+                     of a page when looking at its layout.
+                </p>
+            </div>
+            <div class="feature-item">
+                <div class="item">
+                    <div class="flower">
+                        <img src="Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <h4>Pink Flower Tree</h4>
+                </div>
+                <div class="item margin">
+                    <div class="flower">
+                        <img id="small" src="Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <h4>Pink Flower Tree</h4>
+                </div>
+                <div class="item">
+                    <div class="flower">
+                        <img id="color" src="Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                    <h4>Pink Flower Tree</h4>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
