deal instagram and form section added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </p>
             <button class="btn">Shop Now</button>
         </div>
-        <img class="h-right" src="Flower Asset/pngwing 10.png" alt="">
+        <img class="h-right" src="img/pngwing 10.png" alt="">
     </header>
 
     <main>
@@ -41,28 +41,75 @@
             <div class="feature-item">
                 <div class="item">
                     <div class="flower">
-                        <img src="Flower Asset/pngwing 6.png" alt="">
+                        <img src="img/pngwing 6.png" alt="">
                     </div>
                     <h4>Pink Flower Tree</h4>
                 </div>
                 <div class="item margin">
                     <div class="flower">
-                        <img id="small" src="Flower Asset/pngwing 5.png" alt="">
+                        <img id="small" src="img/pngwing 5.png" alt="">
                     </div>
                     <h4>Pink Flower Tree</h4>
                 </div>
                 <div class="item">
                     <div class="flower">
-                        <img id="color" src="Flower Asset/pngwing 7.png" alt="">
+                        <img id="color" src="img/pngwing 7.png" alt="">
                     </div>
                     <h4>Pink Flower Tree</h4>
+                </div>
+            </div>
+        </section>
+
+        <section class="deal">
+            <div class="deal-left">
+                <h4 class="sec-title">
+                    Hot Deal ! Sale Up To 25% <span style="color: #E55473;">off</span>
+                </h4>
+                <p class="sec-description">
+                    It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout.
+                </p>
+                <button class="btn">Sign Up</button>
+            </div>
+            <div class="deal-right">
+                <img src="img/pngwing 8.png" alt="">
+            </div>
+        </section>
+
+        <section class="instagram">
+            <div class="details">
+                <h4 class="sec-title">
+                    Instagram
+                </h4>
+                <p class="sec-description">
+                    It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout.
+                </p>
+            </div>
+            <div class="galary">
+                <img src="img/Flower 01.png" alt="">
+                <img src="img/Rectangle 4.png" alt="">
+                <img src="img/Rectangle 5.png" alt="">
+                <img src="img/Rectangle 6.png" alt="">
+            </div>
+        </section>
+
+        <section class="subscribe">
+            <div class="info">
+                <div class="sub-info">
+                    <h4 style="margin-bottom: 0;" class="sec-title">Get The Latest Deals</h4>
+                    <p class="sec-description">$30 coupon for first shopping</p>
+                </div>
+                <div class="form">
+                    <input type="text" placeholder="Enter your email here....">
+                    <button class="btn">subscribe</button>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-
+        
     </footer>
 </body>
 </html>
