--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
             </div>
         </section>
 
+        <section class="about">
+            <div class="about-info">
+                <h3 class="sec-title">
+                    About Us
+                </h3>
+                <p>
+                    When you shop flowers online with Continental Flowers, you will see beautiful bouquet arrangements of flowers hand-crafted with passion, attention to detail, and great care.
+                    <br>
+                    Continental Flowers is committed to creating beautiful flower arrangements and floral gifts for any occasion. From Anniversary and Birthday flowers, to Valentine’s and Mother’s Day flowers, Continental Flowers has the best selection of floral designs for every unique occasion.
+                    <br>
+                    As a top florist in Stephenville, NL, each of our floral arrangements get the time and personalized attention they deserve. Continental Flowers passionately makes all bouquets in house, and personally delivers to your recipient in Stephenville so they are guaranteed to receive fresh and beautiful flowers every time with an added personal touch. Pick out a gorgeous floral arrangement on our website and order flowers online through our convenient and secure checkout page. Continental Flowers will expertly arrange your bouquet of beautiful blooms and can even create a custom arrangement or gift basket for your special occasion.
+                    <br>
+                    Continental Flowers offers flower delivery in and around Stephenville, as well as nationwide delivery through our reliable florist network! Continental Flowers provides same-day flower delivery for your last minute gift needs in Stephenville, NL as well.
+                </p>
+            </div>
+        </section>
+
         <section class="subscribe">
             <div class="info">
                 <div class="sub-info">
@@ -106,10 +123,18 @@
                 </div>
             </div>
         </section>
+
     </main>
 
-    <footer>
-        
+    <footer class="footer">
+        <h3 class="sec-title"><span style="color: #E55473;">Flower</span>Shop</h3>
+        <p>
+            It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout.
+        </p>
+        <span class="footer-text">
+            @2020-2023, FlowerShop.com. All rights reserved. 
+        </span>
     </footer>
 </body>
 </html>
